fixed ptt button not selectable on mobile

--- a/hand/app/client/src/styles/classroom.css
+++ b/hand/app/client/src/styles/classroom.css
@@ -2,6 +2,12 @@
   font-size: 70px;
   user-select: none;
   margin-bottom: 40px;
+  touch-action: none;
+}
+
+#talk-button span {
+  /* to ignore events on button text */
+  pointer-events: none;
 }
 
 .icon {
